docs/docs/logstashui/kubernetes/examples/mysql/namespace.yaml
#Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
#or more contributor license agreements. Licensed under the Elastic License;
#you may not use this file except in compliance with the Elastic License.

apiVersion: v1
kind: Namespace
metadata:
  name: logstashui
